# generator-rewrite-examples

./: CMakeLists.txt  generator.h  type_traits.h
src/: coro_storage.h  coroutine_frame.h  coroutine_handle.h  generator.h  inline_coroutine_frame.h  inline_generator.h  inline_handle.h  inline_simple_generators.cpp  iota.h  iota_assembly_test_devirt.cpp  iota_benchmark.cpp  iota_unified.h  macros.h  simple_generators.cpp  string_prepend.h  suspend.h  task.h  task_example.cpp  task_example.h  throwing_parse_ints.h  type_traits.h  unified_generator.h  unified_generators_test.cpp
src/assembly_analysis/: iota_assembly_test.cpp  iota_assembly_test.s  iota_assembly_test_devirt.cpp  iota_assembly_test_fresh.s  iota_assembly_test_noexcept.s
src/generator/: iota_benchmark.cpp  iota_unified.h  simple_generators.cpp  string_prepend.h  throwing_parse_ints.h  unified_generator.h  unified_generators_test.cpp
src/old_files/: generator.h  inline_generator.h  inline_iota.h  inline_iota_unified.h  iota.h
src/optional_monad/: LICENSE.txt  README.md  maybe.h  maybe_benchmark.cpp  maybe_example.cpp  maybe_example.h  maybe_test.cpp  return_object_holder.h
src/task/: task.h  task_example.cpp  task_example.h
src/util/: coro_storage.h  coroutine_frame.h  coroutine_handle.h  inline_coroutine_frame.h  macros.h  suspend.h  type_traits.h
